--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
 .idea
 .vscode
 
+# logfile
 *.log
 
+# binaries for programs and plugins
+*.exe
+*.exe~
+
+# Test binary, build with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with IDE
+*.out
